camel-sasl-gssapi: Fails to build without KRB5
Compiling versions 3.35.3 and 3.35.90 fails with this error:
In file included from /usr/include/glib-2.0/gobject/gobject.h:24,
from /usr/include/glib-2.0/gobject/gbinding.h:29,
from /usr/include/glib-2.0/glib-object.h:22,
from /usr/include/glib-2.0/gio/gioenums.h:28,
from /usr/include/glib-2.0/gio/giotypes.h:28,
from /usr/include/glib-2.0/gio/gio.h:26,
from /var/tmp/portage/gnome-extra/evolution-data-server-3.35.90/work/evolution-data-server-3.35.90/src/camel/camel-sasl-gssapi.c:34:
/var/tmp/portage/gnome-extra/evolution-data-server-3.35.90/work/evolution-data-server-3.35.90/src/camel/camel-sasl-gssapi.c: In function ‘camel_sasl_gssapi_get_type_once’:
/var/tmp/portage/gnome-extra/evolution-data-server-3.35.90/work/evolution-data-server-3.35.90/src/camel/camel-sasl-gssapi.c:121:29: error: invalid application of ‘sizeof’ to incomplete type ‘CamelSaslGssapiPrivate’ {aka ‘struct _CamelSaslGssapiPrivate’}
121 | G_DEFINE_TYPE_WITH_PRIVATE (CamelSaslGssapi, camel_sasl_gssapi, CAMEL_TYPE_SASL)
| ^~~~~~~~~~~~~~~
/usr/include/glib-2.0/gobject/gtype.h:1763:111: note: in definition of macro ‘G_DEFINE_TYPE_EXTENDED’
1763 | #define G_DEFINE_TYPE_EXTENDED(TN, t_n, T_P, _f_, _C_) _G_DEFINE_TYPE_EXTENDED_BEGIN (TN, t_n, T_P, _f_) {_C_;} _G_DEFINE_TYPE_EXTENDED_END()
| ^~~
/usr/include/glib-2.0/gobject/gtype.h:1644:102: note: in expansion of macro ‘G_ADD_PRIVATE’
1644 | #define G_DEFINE_TYPE_WITH_PRIVATE(TN, t_n, T_P) G_DEFINE_TYPE_EXTENDED (TN, t_n, T_P, 0, G_ADD_PRIVATE (TN))
| ^~~~~~~~~~~~~
/var/tmp/portage/gnome-extra/evolution-data-server-3.35.90/work/evolution-data-server-3.35.90/src/camel/camel-sasl-gssapi.c:121:1: note: in expansion of macro ‘G_DEFINE_TYPE_WITH_PRIVATE’
121 | G_DEFINE_TYPE_WITH_PRIVATE (CamelSaslGssapi, camel_sasl_gssapi, CAMEL_TYPE_SASL)
| ^~~~~~~~~~~~~~~~~~~~~~~~~~
make[2]: *** [src/camel/CMakeFiles/camel.dir/build.make:1076: src/camel/CMakeFiles/camel.dir/camel-sasl-gssapi.c.o] Error 1
I can provide more information if needed.
Edited by Milan Crha