I#187 - camel-sasl-gssapi: Fails to build without KRB5

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/issues/187